--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build:docker:go": "docker build -t hyperqubeio/pb-go -f docker/go.Dockerfile .",
     "build:docker:node": "docker build -t hyperqubeio/pb-node -f docker/node.Dockerfile .",
     "generate:go": "docker run --rm -it -v $(pwd):/go/src/pb hyperqubeio/pb-go",
-    "generate:node": "docker run --rm -it -v $(pwd):/pb -v node_modules:/pb/node_modules hyperqubeio/pb-node",
-    "generate:nodex": "proto-loader-gen-types --grpcLib=@grpc/grpc-js --outDir=node/src src/*.proto"
+    "generate:node": "docker run --rm -it -v $(pwd):/pb -v node_modules:/pb/node_modules hyperqubeio/pb-node"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.3.4",
