--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "prepublishOnly": "yarn build:node"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.3.4",
-    "@types/google-protobuf": "^3.15.2",
-    "google-protobuf": "^3.17.3"
+    "@grpc/grpc-js": "^1.5.10",
+    "@types/google-protobuf": "^3.15.5",
+    "google-protobuf": "^3.20.0-rc.2"
   },
   "devDependencies": {
-    "@grpc/proto-loader": "^0.6.4",
+    "@grpc/proto-loader": "^0.6.9",
     "grpc-tools": "^1.11.2",
     "ts-protoc-gen": "^0.15.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.6.3"
   }
 }
