Add license. oops

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hyperqube/v3-agent-protobuf",
   "version": "1.0.0",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "main": "node/index.js",
   "types": "node/index.d.ts",
   "scripts": {
